
20121007:
> reverted resizablelib to v1.3 to prevent GUI glitches
> adjusted miniupnplib so kMule can be run under WindowsXP again [WiZaRd]
+ preview indication is now done by showing the preview icon [WiZaRd]
 * use "PreviewIndicatorMode" in the .ini to disable (0) the feature or use the old color mode (2) instead
+ added hashing progress indication to status bar [WiZaRd]
~ kMule now hashes the smallest file first to speed up file sharing [WiZaRd]
+ count block/success send && drop blocking sockets [WiZaRd - original by Xman?]

20121021:
! fixed handle leak in "share small files first" - thx to RejZoR [WiZaRd]
! fixed MM issue that could sometimes crash kMule [WiZaRd]
~ changed MM animation to "blend" [WiZaRd]
- removed obsolete filedonkey search method [WiZaRd]
+ "customSearches" [WiZaRd]
 * you can now customize additional web search methods via editing the customSearches.dat in your config dir
 * see the abovementioned file for details and examples
+ ZZ (focused!) upload system [WiZaRd - original by ZZ]
+ improved lowID fairness [WiZaRd - by VQB]
+ Upload feedback [WiZaRd]

20130112:
! fixed possible crash when loading a new ipfilter while kMule was already running - thx to SS1900 [WiZaRd]
! fixed a minimule crash under Wine - thx to ]Axl[ [WiZaRd]
~ don't check for "already in use" ports when updating or UPnP has been disabled [WiZaRd]

XXXXYYZZ:
~ for bettter understanding, we changed "low id" to "firewalled" and "high id" to "open" [WiZaRd]
+ added button to proxy dialog to retrieve the OS proxy settings [WiZaRd]
! WINE compatibility [WiZaRd] - see bewlow!
 * using kMule under WINE would work because newer WINE releases include a "fake" wmvcore.dll file which crashes kMule
 * kMule will now try to detect WINE and skip the guilty code parts automatically
 * if the detection fails OR if you installed a proper wmvcore.dll file and want to use it, you can add a "WineCompatibility=0/1" entry in the kMule.ini file