@@ -130,5 +130,6 @@ protected:
     afx_msg LRESULT OnTreeOptsCtrlNotify(WPARAM wParam, LPARAM lParam);
     afx_msg void OnHelp();
     afx_msg BOOL OnHelpInfo(HELPINFO* pHelpInfo);
-    afx_msg void OnBnClickedOpenprefini();
+    afx_msg void OnBnClickedOpenPrefIni();
+	afx_msg void OnBnClickedOpenModPrefIni();
 };
