@@ -27,6 +27,8 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "languages - French (France)
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "languages - Spanish (Castilian)", "lang\es_ES_T_vc10.vcxproj", "{B0DAEE35-FD0F-4FAF-A7C1-3D52103B3E81}"
 EndProject
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "languages - Chinese (P.R.C.)", "lang\zh_CN_vc10.vcxproj", "{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}"
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Debug Static|Win32 = Debug Static|Win32
@@ -456,6 +458,40 @@ Global
 		{B0DAEE35-FD0F-4FAF-A7C1-3D52103B3E81}.Unicode_Debug|Win32.Build.0 = Dynamic|Win32
 		{B0DAEE35-FD0F-4FAF-A7C1-3D52103B3E81}.Unicode_Release|Win32.ActiveCfg = Dynamic|Win32
 		{B0DAEE35-FD0F-4FAF-A7C1-3D52103B3E81}.Unicode_Release|Win32.Build.0 = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.Debug Static|Win32.ActiveCfg = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.Debug Static|Win32.Build.0 = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.Debug|Win32.ActiveCfg = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.Debug|Win32.Build.0 = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.DLL Debug|Win32.ActiveCfg = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.DLL Debug|Win32.Build.0 = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.DLL Release|Win32.ActiveCfg = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.DLL Release|Win32.Build.0 = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.DLL VB|Win32.ActiveCfg = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.DLL VB|Win32.Build.0 = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.DLL-Import Debug|Win32.ActiveCfg = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.DLL-Import Debug|Win32.Build.0 = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.DLL-Import Release|Win32.ActiveCfg = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.DLL-Import Release|Win32.Build.0 = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.Dynamic|Win32.ActiveCfg = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.Dynamic|Win32.Build.0 = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.LIB Debug|Win32.ActiveCfg = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.LIB Debug|Win32.Build.0 = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.LIB Release|Win32.ActiveCfg = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.LIB Release|Win32.Build.0 = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.Release Static|Win32.ActiveCfg = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.Release Static|Win32.Build.0 = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.Release|Win32.ActiveCfg = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.Release|Win32.Build.0 = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.ReleaseUnicode|Win32.ActiveCfg = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.ReleaseUnicode|Win32.Build.0 = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.Template|Win32.ActiveCfg = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.Template|Win32.Build.0 = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.testversion|Win32.ActiveCfg = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.testversion|Win32.Build.0 = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.Unicode_Debug|Win32.ActiveCfg = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.Unicode_Debug|Win32.Build.0 = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.Unicode_Release|Win32.ActiveCfg = Dynamic|Win32
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782}.Unicode_Release|Win32.Build.0 = Dynamic|Win32
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
@@ -465,5 +501,6 @@ Global
 		{FEF2FD72-388B-42F6-B5DA-B9A663ACF557} = {2F50C65A-AB15-4AB4-B6A7-DA0956DBD090}
 		{A7E4E792-AA76-4977-A725-1C428AADE381} = {2F50C65A-AB15-4AB4-B6A7-DA0956DBD090}
 		{B0DAEE35-FD0F-4FAF-A7C1-3D52103B3E81} = {2F50C65A-AB15-4AB4-B6A7-DA0956DBD090}
+		{BFCEE1BE-5DC9-4CDF-B55E-6DEDFC4FF782} = {2F50C65A-AB15-4AB4-B6A7-DA0956DBD090}
 	EndGlobalSection
 EndGlobal
