@@ -433,6 +433,7 @@
     <None Include="Mod\main features.txt" />
     <None Include="res\all.ico" />
     <None Include="res\ArchivePreview.ico" />
+    <None Include="res\Badguy.ico" />
     <None Include="res\bold.ico" />
     <None Include="res\Browse8.ico" />
     <None Include="res\Cancel.ico" />
@@ -505,6 +506,7 @@
     <None Include="res\DeleteSelected.ico" />
     <None Include="res\DirectDownload.ico" />
     <None Include="res\Display.ico" />
+    <None Include="res\down.ico" />
     <None Include="res\Download.gif" />
     <None Include="res\Download.ico" />
     <None Include="res\DownloadFiles.ico" />
@@ -521,6 +523,7 @@
     <None Include="res\ExpandAll.ico" />
     <None Include="res\ExpandAll2.ico" />
     <None Include="res\ExportAll.ico" />
+    <None Include="res\FDC.ico" />
     <None Include="res\FileComments.ico" />
     <None Include="res\FileCommentsOvl.ico" />
     <None Include="res\FileDonkey.ico" />
@@ -542,6 +545,7 @@
     <None Include="res\FileTypeAudio.ico" />
     <None Include="res\FileTypeCDImage.ico" />
     <None Include="res\FileTypeDocument.ico" />
+    <None Include="res\FileTypeEmuleCollection.ico" />
     <None Include="res\FileTypePicture.ico" />
     <None Include="res\FileTypeProgram.ico" />
     <None Include="res\FileTypeVideo.ico" />
@@ -604,6 +608,10 @@
     <None Include="res\Preferences.ico" />
     <None Include="res\Preview.ico" />
     <None Include="res\Priority.ico" />
+    <None Include="res\PriorityAuto.ico" />
+    <None Include="res\PriorityHigh.ico" />
+    <None Include="res\PriorityLow.ico" />
+    <None Include="res\PriorityNormal.ico" />
     <None Include="res\Proxy.ico" />
     <None Include="res\Records.ico" />
     <None Include="res\Rename.ico" />
@@ -620,6 +628,8 @@
     <None Include="res\SearchParams.ico" />
     <None Include="res\SearchResults.ico" />
     <None Include="res\SearchServerActive.ico" />
+    <None Include="res\Search_En.ico" />
+    <None Include="res\Search_Multi.ico" />
     <None Include="res\Security.ico" />
     <None Include="res\Server.ico" />
     <None Include="res\ServerAdd.ico" />
@@ -630,27 +640,38 @@
     <None Include="res\SharedFiles.ico" />
     <None Include="res\SharedFilesList.ico" />
     <None Include="res\SharedFolderOvl.ico" />
+    <None Include="res\Smiley_Cry.gif" />
     <None Include="res\Smiley_Cry.ico" />
+    <None Include="res\Smiley_Disgust.gif" />
     <None Include="res\Smiley_Disgust.ico" />
+    <None Include="res\Smiley_Happy.gif" />
     <None Include="res\Smiley_Happy.ico" />
     <None Include="res\Smiley_Interest.ico" />
+    <None Include="res\Smiley_Laugh.gif" />
     <None Include="res\Smiley_Laugh.ico" />
+    <None Include="res\Smiley_lookside.gif" />
     <None Include="res\Smiley_lookside.ico" />
+    <None Include="res\Smiley_Love.gif" />
     <None Include="res\Smiley_Love.ico" />
     <None Include="res\Smiley_omg.ico" />
     <None Include="res\Smiley_Ph34r.ico" />
+    <None Include="res\Smiley_Sad.gif" />
     <None Include="res\Smiley_Sad.ico" />
     <None Include="res\Smiley_sadq.ico" />
     <None Include="res\Smiley_Sealed.ico" />
+    <None Include="res\Smiley_Skeptic.gif" />
     <None Include="res\Smiley_Skeptic.ico" />
+    <None Include="res\Smiley_Smile.gif" />
     <None Include="res\Smiley_Smile.ico" />
     <None Include="res\Smiley_smileq.ico" />
     <None Include="res\Smiley_Tongue.ico" />
+    <None Include="res\Smiley_Wink.gif" />
     <None Include="res\Smiley_Wink.ico" />
     <None Include="res\Spam.ico" />
     <None Include="res\Speed.ico" />
     <None Include="res\SpeedMax.ico" />
     <None Include="res\SpeedMin.ico" />
+    <None Include="res\splash.jpg" />
     <None Include="res\SplitWindow.ico" />
     <None Include="res\Start.ico" />
     <None Include="res\Statistics.ico" />
@@ -675,6 +696,7 @@
     <None Include="res\TrayLowID.ico" />
     <None Include="res\Tweak.ico" />
     <None Include="res\underline.ico" />
+    <None Include="res\up.ico" />
     <None Include="res\Up0down0.ico" />
     <None Include="res\Up0down1.ico" />
     <None Include="res\Up1down0.ico" />
