@@ -170,3 +170,4 @@ XXXXYYZZ:
  * using kMule under WINE would work because newer WINE releases include a "fake" wmvcore.dll file which crashes kMule
  * kMule will now try to detect WINE and skip the guilty code parts automatically
  * if the detection fails OR if you installed a proper wmvcore.dll file and want to use it, you can add a "WineCompatibility=0/1" entry in the kMule.ini file
++ added button to edit kMule.ini to extended options page [WiZaRd]
